fix: update notification service routes and user update API, add  validation and sanitization helper function for name
